<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="#ffffff"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:gravity="center"
            android:id="@+id/imieTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imie" />

        <TextView
            android:gravity="center"
            android:id="@+id/nazwiskoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazwisko" />

        <TextView
            android:gravity="center"
            android:id="@+id/plecTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:gravity="center"
            android:id="@+id/adresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adres" />

        <TextView
            android:gravity="center"
            android:id="@+id/kodTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kod" />

        <TextView
            android:gravity="center"
            android:id="@+id/miastoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miasto" />

    </LinearLayout>
</ScrollView>
